2011-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Add letter based sequence to autolabel
	  and meta-autolabel.
	* man/xml-source/amanda.conf.5.xml: Document them.

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: s/stralloc/g_strdup/

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: typo.

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Call short_dump_state on all state change.

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by p_michalczyk
	* application-src/amstar.c: Place command_options at the and of
	  command line.

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	Replace semaphore by amsemaphore.
	* common-src/Makefile.am: Remove semaphore.*, add amsemaphore.*
	* common-src/amsemaphore-test.c: New copy of semaphore-test.c
	* common-src/amsemaphore.c: New copy of semaphore.c
	* common-src/amsemaphore.h: New copy of semaphore.h
	* common-src/semaphore-test.c: Removed file.
	* common-src/semaphore.c: Removed file.
	* common-src/semaphore.h: Removed file.
	* device-src/rait-device.c: s/semaphore_/amsemaphore_/g
	* xfer-src/element-glue.c: s/semaphore_/amsemaphore_/g
	* xfer-src/element-glue.h: s/semaphore_/amsemaphore_/g

2011-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Check holding file is in a holding directory.

2011-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: s/Witout/Without/

2011-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/xfer-dest-holding.c: Check return value of ftruncate.
	* perl/Amanda/Logfile.swg: Remove debugging statement.

2011-06-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Remove KAMANDA_SERVICE_NAME, SERVICE_SUFFIX,
	  AMANDA_SERVICE_DEFAULT and KAMANDA_SERVICE_DEFAULT.
	* common-src/bsd-security.c: Use AMANDA_SERVICE_NAME.