@@ -1,4 +1,8 @@
 2011-07-05  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/robot.pm: Retry up to 120 seconds if the sense
+	  key is 'Not Ready'
+
+2011-07-05  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer.pm: Add letter based sequence to autolabel
 	  and meta-autolabel.
 	* man/xml-source/amanda.conf.5.xml: Document them.
